kubernetes/katago-server/templates/peerauthentication.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "no-mtls"
  namespace: "serverspace"
spec:
  mtls:
    mode: DISABLE
